etc/kubernetes/manifests/svc-hasher.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-hasher
spec:
  ports:
    -
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    dockercoins: hasher
  type: ClusterIP
