etc/kubernetes/manifests/svc-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-redis
spec:
  ports:
    -
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    dockercoins: sts-redis
  type: ClusterIP
