etc/kubernetes/manifests/svc-rng.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-rng
spec:
  ports:
    -
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    dockercoins: rng
  type: ClusterIP
