etc/kubernetes/manifests/svc-webui.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-webui
spec:
  ports:
    -
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    dockercoins: webui
  type: ClusterIP
