etc/kubernetes/manifests/netpol-default.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-default
spec:
  ingress: []
  podSelector: {}
  policyTypes:
    -
      Ingress
