etc/kubernetes/manifests/netpol-hasher.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-hasher
spec:
  ingress:
    -
      from:
        -
          podSelector:
            matchLabels:
              dockercoins: worker
      ports:
        -
          port: 8080
          protocol: TCP
  podSelector:
    matchLabels:
      dockercoins: hasher
  policyTypes:
    -
      Ingress
