etc/kubernetes/manifests/netpol-webui.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: netpol-webui
spec:
  ingress:
    -
      from: []
      ports:
        -
          port: 8080
          protocol: TCP
  podSelector:
    matchLabels:
      dockercoins: webui
  policyTypes:
    -
      Ingress
